# agent-learning

./: prompt.md
00_setup/: create_fake_data.py  create_genie_spaces.py
01_dspy_agent/: 01_dspy_agent.py
02_dspy_langgraph_agent/: 02_dspy_langgraph_agent.py
03_dspy_langgraph_whl/: deploy.py  pyproject.toml
03_dspy_langgraph_whl/src/agent/: __init__.py  agent.py  nodes.py  tools.py
04_langchain_agent/: 04_langchain_agent.py  agent.py
05_langchain_langgraph_agent/: 05_langchain_langgraph_agent.py
06_langchain_langgraph_whl/: deploy.py  pyproject.toml
06_langchain_langgraph_whl/src/agent/: __init__.py  agent.py  nodes.py  tools.py
07_genie_dspy_agent/: 07_genie_dspy_agent.py
08_genie_langchain_agent/: 08_genie_langchain_agent.py
09_multi_genie_dspy_agent/: 09_multi_genie_dspy_agent.py
10_multi_genie_langchain_agent/: 10_multi_genie_langchain_agent.py
11_genie_dspy_whl/: README.md  deploy.py  pyproject.toml
11_genie_dspy_whl/src/agent/: __init__.py  agent.py  genie.py
12_genie_langchain_whl/: deploy.py  pyproject.toml
12_genie_langchain_whl/src/agent/: __init__.py  agent.py  genie.py
13_multi_genie_dspy_whl/: deploy.py  pyproject.toml
13_multi_genie_dspy_whl/src/agent/: __init__.py  agent.py  genie.py
14_multi_genie_langchain_whl/: deploy.py  pyproject.toml
14_multi_genie_langchain_whl/src/agent/: __init__.py  agent.py  genie.py
agenticlearning/: CLAUDE.md  prompt_v2.md  sitemap.xml
agenticlearning/00_setup/: create_fake_data.py  create_genie_spaces.py
agenticlearning/01_dspy_agent/: 01_dspy_agent.py
agenticlearning/02_dspy_langgraph_agent/: 02_dspy_langgraph_agent.py
agenticlearning/03_dspy_langgraph_whl/: deploy.py  pyproject.toml
agenticlearning/03_dspy_langgraph_whl/src/agent/: __init__.py  agent.py  nodes.py  tools.py
agenticlearning/04_langchain_agent/: 04_langchain_agent.py
agenticlearning/05_langchain_langgraph_agent/: 05_langchain_langgraph_agent.py
agenticlearning/06_langchain_langgraph_whl/: deploy.py  pyproject.toml
agenticlearning/06_langchain_langgraph_whl/src/agent/: __init__.py  agent.py  nodes.py  tools.py
agenticlearning/07_genie_dspy_agent/: 07_genie_dspy_agent.py
agenticlearning/08_genie_langchain_agent/: 08_genie_langchain_agent.py
agenticlearning/09_multi_genie_dspy_agent/: 09_multi_genie_dspy_agent.py
agenticlearning/10_multi_genie_langchain_agent/: 10_multi_genie_langchain_agent.py
agenticlearning/11_genie_dspy_whl/: deploy.py  pyproject.toml
agenticlearning/11_genie_dspy_whl/src/agent/: __init__.py  agent.py  genie.py
agenticlearning/12_genie_langchain_whl/: deploy.py  pyproject.toml
agenticlearning/12_genie_langchain_whl/src/agent/: __init__.py  agent.py  genie.py
agenticlearning/13_multi_genie_dspy_whl/: deploy.py  pyproject.toml
agenticlearning/13_multi_genie_dspy_whl/src/agent/: __init__.py  agent.py  genie.py
agenticlearning/14_multi_genie_langchain_whl/: deploy.py  pyproject.toml
agenticlearning/14_multi_genie_langchain_whl/src/agent/: __init__.py  agent.py  genie.py
