[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-langgraph-agent"
version = "0.1.0"
description = "Customer Support Agent with DSPy CoT and LangGraph"
requires-python = ">=3.9"
dependencies = [
    "dspy",
    "langgraph",
    "langchain-core",
    "mlflow>=3.0",
    "databricks-sdk",
    "pydantic>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
