[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi_genie_dspy_agent"
version = "0.1.0"
description = "Multi-Genie supervisor agent with DSPy routing (orders, returns, products)"
requires-python = ">=3.9"
dependencies = [
    "dspy",
    "mlflow>=3",
    "databricks-agents",
    "pyspark",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
